--- a/index.css
+++ b/index.css
@@ -2,6 +2,60 @@ body {
     position: relative;
     text-align: center;
     top: 90px;
+    background: #F7F7F7;
+}
+ul {
+    position: relative;
+    list-style-type: none;
+    display: inline;
+
+}
+li {
+    position: relative;
+    display: inline;
+    margin: 20px;
+    top: 180px;
+    font-size: 30px;
+}
+.Resultat {
+    position: relative;
+    bottom: 50px;
+}
+.TextResult {
+    position: relative;
+    font-size: 30px;
+}
+.Formulaire {
+    position: relative;
+    top: 370px;
+}
+.TitrePrincipale {
+    position: relative;
+    font-size: 50px;
+    font-family: Arial;
+    color: #B72C00;
+    bottom: 30px;
+}
+.TitreCheckbox {
+    position: relative;
+    font-size: 30px;
+    right: 55px;
+    margin: 20px;
+    bottom: 20px;
+}
+.Checkbox {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    top: 2px;
+}
+.Nom {
+    position: relative;
+    width: 230px;
+    height: 30px;
+    font-size: 20px;
+    bottom: 22px;
+    text-align: center;
 }
 .ToDoList {
     position: relative;
@@ -18,29 +72,68 @@ body {
     position: relative;
     top: 20px;
 }
+.TitreDateDebut {
+    position: relative;
+    font-size: 30px;
+    font-family: Arial;
+}
 .DateDebut {
     position: relative;
+    left: 20px;
+    width: 180px;
+    height: 30px;
+    bottom: 2px;
+    font-size: 20px;
+}
+.TitreDateFin {
+    position: relative;
+    top: 25px;
+    font-size: 30px;
+    font-family: Arial;
 }
 .DateFin {
     position: relative;
+    left: 20px;
+    bottom: 2px;
+    width: 180px;
+    height: 30px;
+    font-size: 20px;
+}
+.TextList {
+    position: relative;
+    top: 100px;
+    right: 120px;
+    width: 320px;
+    height: 35px;
+    text-align: center;
+    font-size: 30px;
+}
+.BoutonAjouter {
+    position: relative;
+    top: 100px;
+    left: 20px;
+    width: 140px;
+    height: 50px;
+    font-size: 30px;
+    font-weight: bold;
+    background-color: #FF8300;
+    border: none;
+    border-radius: 3%;
+    color: #FFFFFF;
 }
 .NavBar {
     position: relative;
     top: 30px;
 }
-ul {
-    position: relative;
-    list-style-type: none;
-    display: inline;
-
-}
-li {
-    position: relative;
-    display: inline;
-    margin: 10px;
-    top: 60px;
-}
 .BoutonDel {
     position: relative;
-    top: 20px;
+    top: 270px;
+    width: 320px;
+    height: 50px;
+    font-size: 30px;
+    font-weight: bold;
+    background-color: #FF8300;
+    border: none;
+    border-radius: 3%;
+    color: #FFFFFF;
 }
